lbdb (0.45) unstable; urgency=medium

  * Upgrade to Standards-Version 4.1.1 (no changes).
  * Remove autotools-dev, since this is included in debhelper v10.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 05 Nov 2017 13:58:21 +0100

lbdb (0.44) unstable; urgency=medium

  * Fix count in m_inmail munge.
  * Stop adding trailing spaces to date in m_inmail.utf-8.
  * Remove unwanted trailing spaces from date field in m_imail.utf-8.
    Thanks to Peter P. for reporting this issue.
  * Upgrade to Standards-Version 4.1.0 (no changes).

 -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Sep 2017 18:30:40 +0200

lbdb (0.43) unstable; urgency=medium

  * Rebuild aclocal with version 1.15.
  * Update config.guess and config.sub from autotools-dev 20161112.1
  * m_khard: New CardDAV module using khard.  Thanks to Colin Watson for
    providing the patch (Closes: #866178).
  * Upgrade to Standards-Version 4.0.0 (https in copyright format).
  * Upgrade to debhelper 10.
  * Update TODO list.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 01 Jul 2017 13:10:13 +0200

lbdb (0.42.1) unstable; urgency=medium

  * lbdb-munge: fix autoconf libdir path (Closes: #847735).

 -- Roland Rosenfeld <roland@debian.org>  Sun, 11 Dec 2016 12:14:13 +0100

lbdb (0.42) unstable; urgency=medium

  * m_gpg, m_pgp[25]: extend allowed real name length from 27 to 47 chars
    (Closes: #825333).
  * Change lbdb-fetchaddr/m_inmail default charset to UTF-8
    (Closes: #600462).
    To avoid problems on upgrading, the database file name was changed
    from $HOME/.lbdb/m_inmail.list to $HOME/.lbdb/m_inmail.utf-8.  If you
    want to keep your old (ISO-8859-15 encoded) database, you can just
    append it to the new file by
     cd $HOME/.lbdb
     iconv -f iso-8859-15 -t utf-8 < m_inmail.list >> m_inmail.utf-8
  * Update autotools.
  * Allow one to remove outdated or infrequently used entries from m_inmail.
    Thanks to Yaroslav Halchenko for providing a patch (Closes: #406232).