@@ -1,4 +1,4 @@
-dnl Copyright (c) 1998-2016 Roland Rosenfeld <roland@spinnaker.de>
+dnl Copyright (c) 1998-2017 Roland Rosenfeld <roland@spinnaker.de>
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -223,5 +223,5 @@ AC_SUBST(LBDB_VERSION)
 AC_SUBST(MODULES)
 AC_CONFIG_FILES([Makefile lbdbq.sh munge.awk lbdb-fetchaddr.sh \
 	lbdb-munge.sh lbdb_lib.sh nodelist2lbdb.pl palm_lsaddr.pl \
-	mutt_ldap_query.pl $MODULES_SH $TACAWK lbdb.spec lbdb.rc])
+	mutt_ldap_query.pl $MODULES_SH $TACAWK lbdb.spec lbdb.rc lbdb-pkg.el])
 AC_OUTPUT
