@@ -1,2 +1,0 @@
-etc
-usr/share/emacs/site-lisp/lbdb
